add get_metdata, get_model_info, list_models methods
